--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +17,10 @@
   "bugs": {
     "url": "https://github.com/drazisil/game/issues"
   },
-  "homepage": "https://github.com/drazisil/game#readme"
+  "homepage": "https://github.com/drazisil/game#readme",
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.3.4"
+  }
 }
