--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "devDependencies": {
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^5.0.0",
     "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-prettier": "^3.1.0",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.4"
   },
@@ -31,9 +33,7 @@
       "es6": true,
       "node": true
     },
-    "extends": [
-      "airbnb-base"
-    ],
+    "extends": ["plugin:prettier/recommended"],
     "globals": {
       "Atomics": "readonly",
       "SharedArrayBuffer": "readonly"
@@ -43,5 +43,5 @@
       "sourceType": "module"
     },
     "rules": {}
-  }
+  }  
 }
