--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint-plugin-import": "^2.17.3",
     "eslint-plugin-prettier": "^3.1.0",
     "jest": "^24.8.0",
+    "jest-junit": "^6.4.0",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.2",
@@ -55,5 +56,8 @@
       "sourceType": "module"
     },
     "rules": {}
+  },
+  "jest-junit": {
+    "output": "./test_results/jest/junit.xml"
   }
 }
