--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,8 @@
 version: 2.1
+
+orbs:
+  codecov: codecov/codecov@1.0.5
+
 jobs: 
   build: 
     docker: # run the steps with Docker
@@ -12,7 +16,7 @@ jobs:
           name: test
           command: npm test
       - store_artifacts: 
-          path: test-results
+          path: test_results
           prefix: tests
       - store_artifacts: 
           path: coverage
