--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,9 @@ jobs:
       - run: 
           name: test
           command: npm test
+      - run:
+          name: Upload coverage
+          command: bash <(curl -s https://codecov.io/bash)
       - store_artifacts: 
           path: test_results
           prefix: tests
